--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@types/multer": "^1.4.7",
     "antd": "^4.23.6",
     "canvas": "^2.10.2",
-    "konva": "^8.3.13",
     "multer": "^1.4.5-lts.1",
     "next": "12.3.1",
     "next-connect": "^0.13.0",
@@ -20,16 +19,12 @@
     "next-share": "^0.19.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-konva": "^18.2.3",
-    "react-loader-spinner": "^5.3.4",
-    "react-qr-code": "^2.0.8",
-    "sharp": "^0.31.1"
+    "react-qr-code": "^2.0.8"
   },
   "devDependencies": {
     "@types/node": "18.11.0",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
-    "@types/sharp": "^0.31.0",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
     "typescript": "4.8.4"
